# mechinterp

./: .gitignore  README.md  app.py  pyproject.toml  utils.py
mechinterp/: ablations.py  heads.py  plotly_utils.py  transformer_utils.py  utils.py
templates/: attention.html  index.html  induction.html  layout.html  pattern.html
tests/: test_heads.py
